@@ -848,12 +848,14 @@ class TDatePicker extends TTextBox
  * TDatePickerClientScript class.
  *
  * Client-side date picker event {@link setOnDateChanged OnDateChanged}
- * can be modified through the {@link TDatePicker:: getClientSide ClientSide}
+ * can be modified through the {@link TDatePicker::getClientSide ClientSide}
  * property of a date picker.
  *
  * The <tt>OnDateChanged</tt> event is raise when the date picker's date
  * is changed.
- *
+ * The formatted date according to {@link TDatePicker::getDateFormat DateFormat} is sent
+ * as parameter to this event
+ * 
  * @author Wei Zhuo <weizhuo[at]gmail[dot]com>
  * @version $Id$
  * @package System.Web.UI.WebControls
