@@ -1,0 +1,20 @@
+<com:TContent ID="Content">
+<com:TDatePicker Id="datePicker" InputMode="DropDownList"> 
+		<prop:ClientSide.OnDateChanged>
+			$('selDate').innerHTML=parameter;
+		</prop:ClientSide.OnDateChanged>			
+</com:TDatePicker>
+<p>
+Client Side Selected date : <span id="selDate"></span>
+</p>
+
+
+<com:TDatePicker Id="datePicker2" InputMode="TextBox" DateFormat="MM/dd/yyyy" Date="12/01/20007" > 
+		<prop:ClientSide.OnDateChanged>
+			$('selDate2').innerHTML=parameter;
+		</prop:ClientSide.OnDateChanged>			
+</com:TDatePicker>
+<p>
+Client Side Selected date : <span id="selDate2"></span>
+</p>
+</com:TContent>
