@@ -1,0 +1,7 @@
+<?php
+
+class Ticket785 extends TPage
+{
+	
+}
+?>
